# create-fastapi-react

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  cli.py  cli.ts  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  setup.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_audit_trail.py
backend/app/: audit.py  config.py  database.py  dependencies.py  main.py  models.py
backend/app/lib/: auth.py
backend/app/routes/: auth.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_database.py
e2e/: auth.spec.ts
frontend/: biome.json  components.json  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: Header.test.tsx  Header.tsx  ProtectedRoute.test.tsx
frontend/src/components/ui/: card.tsx  input.tsx
frontend/src/hooks/: useAuth.test.tsx
frontend/src/lib/: api.test.ts  api.ts  utils.test.ts
frontend/src/pages/: Auth.test.tsx  Auth.tsx  Dashboard.test.tsx  Dashboard.tsx  Home.test.tsx  Home.tsx
infra/: deploy.sh  destroy.sh  init.sh  litestream.yml  ssh.sh
templates/default/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
templates/default/backend/: .env.example  alembic.ini  pyproject.toml
templates/default/backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
templates/default/backend/app/lib/: auth.py
templates/default/backend/app/routes/: auth.py
templates/default/backend/tests/: test_auth.py
templates/default/frontend/: biome.json  index.html  package.json
templates/default/frontend/src/: index.css
templates/default/frontend/src/components/: Header.tsx
templates/default/frontend/src/components/ui/: button.tsx  label.tsx
templates/default/frontend/src/pages/: Auth.tsx  Home.tsx
templates/default/infra/: cloud-init.yml  deploy.sh  destroy.sh  init.sh  litestream.yml
templates/magic-link/backend/app/: config.py  main.py  models.py  schemas.py
templates/magic-link/backend/app/lib/: auth.py
tests/: cli.test.ts  template.test.ts
utils/: template.py  template.ts
