[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-fastapi-react"
version = "0.1.0"
description = "Scaffold a FastAPI + React full-stack app with auth, infra, and CI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jasen Carroll" }]
keywords = ["fastapi", "react", "scaffold", "generator", "fullstack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
create-fastapi-react = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["cli.py", "utils/", "templates/"]
